<html>
0.22 (04/29/2015)
<ol>
<li>Allow modification of StarBeam pulse sizes.</li>
<li>Automatically verify StarBeams. Please see the Options panel.</li>
<li>Corrected QSqlQuery preparation. QSqlQuery::exec() must not be used to prepare SQL statements. (spoton_listener::slotNewConnection(), spoton_misc::savePublishedNeighbo())</li>
<li>Corrected Qt DLLs in the Windows bundle.</li>
<li>Corrected inspection of QSqlQuery::exec() errors in various locations.</li>
<li>Corrected server-side processing of UDP datagrams.</li>
<li>Corrected spoton_misc::prepareUrlDistillersDatabase() and spoton_misc::prepareUrlKeysDatabase() with respect to the ok variables.</li>
<li>Improved error messages in the UI.</li>
<li>Include a file's digest within each StarBeam pulse.</li>
<li>Issue QThread::wait() after QThread::quit().</li>
<li>On Qt 5.x and Windows, assume a fusion style.</li>
<li>QWidget::activateWindow() should only be used on Windows!</li>
<li>Updated SQLite to version 3.8.9, Windows.</li>
</ol>

Archived Contents
<br><br>
https://github.com/textbrowser/spot-on/blob/master/branches/Documentation/RELEASE-NOTES.archived
</html>