@@ -1,0 +1,21 @@
+.TH Spot-On-Kernel 1 "April 29, 2015"
+.SH NAME
+Spot-On-Kernel
+.SH SYNOPSIS
+.B Spot-On-Kernel [options]
+.SH DESCRIPTION
+.B Spot-On-Kernel
+is the kernel program that's responsible for most of the networking tasks of Spot-On.
+.SH OPTIONS
+.IP "--passphrase"
+Disable echo and authenticate the provided input. If the input is correct, the Spot-On-Kernel process will generate the defined keys and prepare its appropriate containers. If the input is incorrect, the Spot-On-Kernel process will terminate with a successful return value.
+.IP "--question-answer"
+Please read the passphrase option's description.
+.IP "--vacuum"
+Vacuum various databases. The process will be performed before the authentication procedure.
+.IP "--version"
+Display version information and exit.
+.SH NOTES
+The Spot-On-Kernel process does not become a daemon process.
+.SH AUTHOR(S)
+.B Alexis Megas
