@@ -391,6 +391,11 @@ QPushButton:pressed {
           <string>32768</string>
          </property>
         </item>
+        <item>
+         <property name="text">
+          <string>65536</string>
+         </property>
+        </item>
        </widget>
       </item>
       <item>
